--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-python-gevent/*.pyc
-python-gevent/dlock/VERSION
-python-gevent/venv/
+# binaries
+dlock-client/dlock-client
+dlock-server/dlock-server
